--- a/login.html
+++ b/login.html
@@ -99,6 +99,23 @@
         </div>
     </div>
 
+    <!-- ✨ التنبيه الأمني الجديد -->
+            <div style="font-size: 0.9em; color: #666; margin-top: 15px; padding: 10px; background-color: #f8f9fa; border-radius: 8px; border-left: 4px solid #17a2b8;">
+                <p style="margin: 0 0 8px 0;">
+                    ⚠️ <strong>تنبيه أمني:</strong> هذا الموقع تجريبي لأغراض العرض فقط. لا يتم إرسال أي بيانات إلى خوادم خارجية، وجميع المعلومات تُخزن محليًا في متصفحك.
+                </p>
+                <p style="margin: 0;">
+                    ⚠️ <strong>Security Notice:</strong> This demo website is for showcase purposes only. No data is sent to external servers, and all information is stored locally in your browser.
+                </p>
+            </div>
+
+    <!-- رابط سياسة الخصوصية -->
+    <footer style="text-align: center; padding: 20px; margin-top: 20px;">
+        <a href="privacy.html" style="font-size: 0.8em; color: #666; text-decoration: none;">
+            سياسة الخصوصية / Privacy Policy
+        </a>
+    </footer>
+
     <script src="js/translations.js"></script>
     <script src="js/theme.js"></script>
     <script src="js/auth.js"></script>
