--- a/index.html
+++ b/index.html
@@ -201,6 +201,23 @@
         </div>
     </div>
 
+    <!-- أضف هذا قبل إغلاق تاج body -->
+<footer style="text-align: center; padding: 20px; margin-top: 40px; border-top: 1px solid #eee;">
+    <div style="font-size: 0.85em; color: #666; margin-bottom: 10px;">
+        🔐 موقع تجريبي آمن - جميع البيانات محفوظة محليًا في متصفحك
+    </div>
+    <div style="font-size: 0.85em; color: #666; margin-bottom: 15px;">
+        🔐 Secure Demo Site - All data stored locally in your browser
+    </div>
+    <a href="privacy.html" style="font-size: 0.8em; color: #007bff; text-decoration: none; margin-right: 10px;">
+        سياسة الخصوصية
+    </a>
+    <span style="color: #ccc;">|</span>
+    <a href="privacy.html" style="font-size: 0.8em; color: #007bff; text-decoration: none; margin-left: 10px;">
+        Privacy Policy
+    </a>
+</footer>
+
     <script src="js/translations.js"></script>
     <script src="js/theme.js"></script>
     <script src="js/auth.js"></script>
