--- a/privacy.html
+++ b/privacy.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>سياسة الخصوصية | Professional To-Do List</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/todo.css">
+    <link rel="stylesheet" href="css/notifications.css">
     <style>
         .privacy-container {
             max-width: 800px;
@@ -12,23 +15,27 @@
             padding: 20px;
             background: white;
             border-radius: 12px;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
         }
+
         .privacy-header {
             text-align: center;
             margin-bottom: 30px;
             color: #333;
         }
+
         .privacy-section {
             margin-bottom: 25px;
             padding: 15px;
             border-left: 4px solid #007bff;
             background-color: #f8f9fa;
         }
+
         .privacy-section h3 {
             color: #007bff;
             margin-bottom: 10px;
         }
+
         .back-link {
             display: inline-block;
             margin-top: 20px;
@@ -36,12 +43,21 @@
             text-decoration: none;
             font-weight: 500;
         }
+
         .back-link:hover {
             text-decoration: underline;
         }
     </style>
 </head>
+
 <body>
+    <button type="button" class="btn btn-outline" id="languageToggle">
+        <span data-en="عربي" data-ar="English">عربي</span>
+    </button>
+
+    <button type="button" class="btn btn-icon" id="themeToggle" aria-label="Toggle theme">
+        <span class="theme-icon">🌙</span>
+    </button>
     <div class="privacy-container">
         <div class="privacy-header">
             <h1>🔐 سياسة الخصوصية والأمان</h1>
@@ -50,32 +66,42 @@
 
         <div class="privacy-section">
             <h3>🛡️ طبيعة الموقع / Website Nature</h3>
-            <p><strong>العربية:</strong> هذا الموقع هو مشروع تجريبي وتعليمي مطور لأغراض العرض والتعلم فقط. لا يتم جمع أو تخزين أو نقل أي بيانات شخصية إلى خوادم خارجية.</p>
-            <p><strong>English:</strong> This website is a demo and educational project developed for showcase and learning purposes only. No personal data is collected, stored, or transmitted to external servers.</p>
+            <p><strong>العربية:</strong> هذا الموقع هو مشروع تجريبي وتعليمي مطور لأغراض العرض والتعلم فقط. لا يتم جمع أو
+                تخزين أو نقل أي بيانات شخصية إلى خوادم خارجية.</p>
+            <p><strong>English:</strong> This website is a demo and educational project developed for showcase and
+                learning purposes only. No personal data is collected, stored, or transmitted to external servers.</p>
         </div>
 
         <div class="privacy-section">
             <h3>💾 تخزين البيانات / Data Storage</h3>
-            <p><strong>العربية:</strong> جميع البيانات التي تدخلها (الحسابات، المهام، الإعدادات) تُحفظ محليًا في متصفحك باستخدام تقنية localStorage. هذه البيانات لا تغادر جهازك أبداً.</p>
-            <p><strong>English:</strong> All data you enter (accounts, tasks, settings) is saved locally in your browser using localStorage technology. This data never leaves your device.</p>
+            <p><strong>العربية:</strong> جميع البيانات التي تدخلها (الحسابات، المهام، الإعدادات) تُحفظ محليًا في متصفحك
+                باستخدام تقنية localStorage. هذه البيانات لا تغادر جهازك أبداً.</p>
+            <p><strong>English:</strong> All data you enter (accounts, tasks, settings) is saved locally in your browser
+                using localStorage technology. This data never leaves your device.</p>
         </div>
 
         <div class="privacy-section">
             <h3>🔒 الأمان / Security</h3>
-            <p><strong>العربية:</strong> لا توجد اتصالات بقواعد بيانات خارجية أو خوادم لجمع البيانات. الموقع يعمل بالكامل في متصفحك دون إرسال أي معلومات للخارج.</p>
-            <p><strong>English:</strong> There are no connections to external databases or data collection servers. The website works entirely within your browser without sending any information externally.</p>
+            <p><strong>العربية:</strong> لا توجد اتصالات بقواعد بيانات خارجية أو خوادم لجمع البيانات. الموقع يعمل
+                بالكامل في متصفحك دون إرسال أي معلومات للخارج.</p>
+            <p><strong>English:</strong> There are no connections to external databases or data collection servers. The
+                website works entirely within your browser without sending any information externally.</p>
         </div>
 
         <div class="privacy-section">
             <h3>🎯 الغرض / Purpose</h3>
-            <p><strong>العربية:</strong> هذا المشروع مصمم لعرض قدرات البرمجة والتطوير، ولتعلم تطوير تطبيقات الويب. يمكن استخدامه بأمان لتجربة إدارة المهام.</p>
-            <p><strong>English:</strong> This project is designed to showcase programming and development skills, and for learning web application development. It can be safely used to experiment with task management.</p>
+            <p><strong>العربية:</strong> هذا المشروع مصمم لعرض قدرات البرمجة والتطوير، ولتعلم تطوير تطبيقات الويب. يمكن
+                استخدامه بأمان لتجربة إدارة المهام.</p>
+            <p><strong>English:</strong> This project is designed to showcase programming and development skills, and
+                for learning web application development. It can be safely used to experiment with task management.</p>
         </div>
 
         <div class="privacy-section">
             <h3>⚠️ إخلاء المسؤولية / Disclaimer</h3>
-            <p><strong>العربية:</strong> بما أن البيانات محفوظة محليًا، قد تضيع إذا قمت بمسح بيانات المتصفح. ننصح بعدم استخدام معلومات حقيقية حساسة.</p>
-            <p><strong>English:</strong> Since data is stored locally, it may be lost if you clear browser data. We recommend not using real sensitive information.</p>
+            <p><strong>العربية:</strong> بما أن البيانات محفوظة محليًا، قد تضيع إذا قمت بمسح بيانات المتصفح. ننصح بعدم
+                استخدام معلومات حقيقية حساسة.</p>
+            <p><strong>English:</strong> Since data is stored locally, it may be lost if you clear browser data. We
+                recommend not using real sensitive information.</p>
         </div>
 
         <div style="text-align: center; margin-top: 30px;">
@@ -88,5 +114,12 @@
             <p>آخر تحديث: سبتمبر 2024 / Last Updated: September 2024</p>
         </div>
     </div>
+
+    <script src="js/translations.js"></script>
+    <script src="js/theme.js"></script>
+    <script src="js/auth.js"></script>
+    <script src="js/login.js"></script>
+<script src="js/notifications.js"></script>
 </body>
+
 </html>
